v5.2 Huffman code done. Some modifications to the byteArray2binary, Little Endian -> Big Endian